Add initial support for DITA 2.0 split chunking
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>